samples/_failures_safe/1761218889_effa9c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8bd8437b.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_8bd8437b.c:152:49: error: expected ‘)’ at end of input
  152 |     printf("Info entries: %u\n", analyzer->stats
      |           ~                                     ^
      |                                                 )
./samples/SAFE/__tmp_8bd8437b.c:152:5: error: expected declaration or statement at end of input
  152 |     printf("Info entries: %u\n", analyzer->stats
      |     ^~~~~~
